# glowing-bear

./: .dockerignore  .editorconfig  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  RELEASE.md  docker-compose.yml  e2e-fix-plan.md  e2e.failing.md  eslint.config.js  index.html  knip.config.ts  package-lock.json  package.json  patch  svelte.config.js  sws.toml  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: build-tauri.yml  ci.yml  deploy-pages.yml
css/: glowingbear.css
js/: bufferlines.js  connection.js  glowingbear.js  notifications.js  utils.js  websockets.js  weechat.js
src/: app.html  index.html
src-angular/: README.md
src-angular/css/: glowingbear.css
src-angular/css/themes/: blue.css
src-angular/js/: glowingbear.js  irc-utils.js  models.js  websockets.js
src-svelte/: .gitignore  AGENTS.md  MIGRATION-PLAYWRIGHT.md  eslint.config.js  package-lock.json  package.json  svelte.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  vite.config.ts  vitest.config.ts
src-svelte/e2e/: global-setup.ts  global-teardown.ts  playwright.config.ts
src-svelte/e2e/fixtures/: auth.ts
src-svelte/e2e/helpers/: buffers.ts  connection.ts  console-logger.ts  input.ts  irc-control.ts  messages.ts  pageerror.ts  settings.ts
src-svelte/e2e/specs/: App-layout.test.ts  AutoconnectSpam.test.ts  BubbleChats.test.ts  BufferHotlist-click.test.ts  BufferHotlist-mobile.test.ts  BufferLineRow.test.ts  BufferList-close.test.ts  BufferList-pinning.test.ts  BufferList-pm.test.ts  BufferList.test.ts  BufferResume.test.ts  ChatView-scroll.test.ts  (+69 more)
src-svelte/src/: app.css  app.d.ts  app.html  favico-js.d.ts  service-worker.ts
src-svelte/static/: generate-icns.mjs  generate-icons.mjs  glowing-bear.icns  webapp.manifest.json
src-svelte/test/: relay-connect.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: main.rs
src/css/: glowingbear.css
src/js/: connection.js  glowingbear.js  handlers.js  notifications.js  plugins.js  utils.js  websockets.js  weechat.js
static/: generate-icns.mjs  generate-icons.mjs  manifest.webmanifest
(+123 files in other folders)
