[package]
name = "glowing-bear"
version = "0.10.0" #sync to ../package.json
description = "A web client for WeeChat"
authors = ["glowing-bear-contributors"]
license = "GPL-3.0"
repository = "https://github.com/glowing-bear/glowing-bear"
default-run = "glowing-bear"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-window-state = "2"
tauri-plugin-opener = "2"
