[package]
name = "glowing-bear"
version = "0.20.2" #sync to ../package.json
description = "A web client for WeeChat"
authors = ["glowing-bear-contributors"]
license = "GPL-3.0"
repository = "https://github.com/glowing-bear/glowing-bear"
default-run = "glowing-bear"
edition = "2021"
rust-version = "1.82"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-window-state = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
# TODO: add updater for self-updating:
# tauri-plugin-updater = "2"
